WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176830
Combining `mix-blend-mode` and `-webkit-backdrop-filter` leads to unexpected results
https://bugs.webkit.org/show_bug.cgi?id=176830
Summary
Combining `mix-blend-mode` and `-webkit-backdrop-filter` leads to unexpected ...
eelco
Reported
2017-09-13 03:26:53 PDT
Created
attachment 320632
[details]
Example to reproduce the bugs. See attachment for a demo. There are 9 possible states I found, 4 of them are correct, the rest is broken (there are multiple broken states for the same combinations, depending on order). 1. After loading: broken: blend mode works, blur works for border, but square is covered 2. Click Disable Blend: correct! only blur (blur on, blend off) 3. Click Enable Blend, Disable Blur: broken: blend mode is also disabled 4. Click Enable Blur: broken: blend mode still disabled 5. Click Disable Blur, Disable Blend, Enable Blend: correct! only blend mode 6. Click Enable Blur: correct! both blend mode and blur 7. Click Disable Blend: broken: blend mode not removed 8. Click Enable Blend: broken: double invert plus square covering blur 9. Click Disable Blend, Disable Blur: correct! (no effects)
Attachments
Example to reproduce the bugs.
(1.01 KB, text/html)
2017-09-13 03:26 PDT
,
eelco
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-09-15 16:09:44 PDT
<
rdar://problem/34470317
>
Matt Woodrow
Comment 3
2023-09-21 14:59:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18044
EWS
Comment 4
2023-09-25 19:05:41 PDT
Committed
268426@main
(ad353604370c): <
https://commits.webkit.org/268426@main
> Reviewed commits have been landed. Closing PR #18044 and removing active labels.
WebKit Commit Bot
Comment 5
2024-01-11 17:23:32 PST
Re-opened since this is blocked by
bug 267438
Matt Woodrow
Comment 6
2024-01-15 19:08:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22804
EWS
Comment 7
2024-03-20 16:35:00 PDT
Committed
276430@main
(72a54445957d): <
https://commits.webkit.org/276430@main
> Reviewed commits have been landed. Closing PR #22804 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug