Backdrop-filter: blur() with a transparent backdrop renders incorrectly. https://bugs.webkit.org/show_bug.cgi?id=176830 <rdar://34470317>

Reviewed by Simon Fraser.

I haven't found a good way to test this that isn't super fuzzy unfortunately.

* Source/WebCore/platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm:
(WebCore::PlatformCAFilters::setFiltersOnLayer):

Canonical link: https://commits.webkit.org/268426@main