Source/WebCore/platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm
@@ -142,15 +142,11 @@ void PlatformCAFilters::setFiltersOnLayer(PlatformLayer* layer, const FilterOper
             [filter setValue:[NSNumber numberWithFloat:floatValueForLength(blurOperation.stdDeviation(), 0)] forKey:@"inputRadius"];
 #if ENABLE(FILTERS_LEVEL_2)
             if ([layer isKindOfClass:[CABackdropLayer class]]) {
-#if PLATFORM(VISION)
-                // If the backdrop is displayed inside a transparent web view over
-                // a material background, we need `normalizeEdgesTransparent`
-                // in order to render correctly.
+                // If the backdrop is transparent, we need `normalizeEdgesTransparent`
+                // in order to render correctly. That's hard to determine from this code,
+                // so use it unconditionally for now.
                 [filter setValue:@YES forKey:@"inputNormalizeEdgesTransparent"];
-#else
                 [filter setValue:@YES forKey:@"inputNormalizeEdges"];
-#endif
-
             }
 #endif
             [filter setName:filterName];
